--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@
 language: R
 sudo: false
 cache: packages
+sudo: required
+dist: trusty
 warnings_are_errors: false
+
+before_install:
+  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
+  - sudo apt-get --yes --force-yes update -qq
+  - sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev
+
 script:
   - R -f tests/render_rmds.R
