--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,3 +1,3 @@
 Package: compendium
 Version: 0.1.0
-Depends: RcppRoll, rmarkdown, tidyverse, haven, dplyr, jsonlite, mapview, dismo, geosphere, httr, ggmap, ggplot2, naniar, reticulate
+Depends: RcppRoll, rmarkdown, spData, tidyverse, haven, dplyr, jsonlite, mapview, dismo, geosphere, httr, ggmap, ggplot2, naniar, reticulate
